--- a/StrainVisualizer/StrainVisualizer.csproj
+++ b/StrainVisualizer/StrainVisualizer.csproj
@@ -14,11 +14,11 @@
 
   <ItemGroup>
     <PackageReference Include="OxyPlot.Wpf" Version="2.0.0" />
+    <PackageReference Include="HoLLy.osu.DatabaseReader" Version="2.1.1" />
   </ItemGroup>
 
   <ItemGroup>
 	  <ProjectReference Include="..\PerformanceCalculator\PerformanceCalculator.csproj" />
-	  <ProjectReference Include="..\osu-database-reader\osu-database-reader\osu-database-reader.csproj" />
   </ItemGroup>
 
   <ItemGroup>
