--- a/.gitignore
+++ b/.gitignore
@@ -268,3 +268,5 @@ __pycache__/
 Staging/
 
 inspectcodereport.xml
+/PerformanceCalculator/cache
+/PerformanceCalculator/Properties/launchSettings.json
